h11types/src/parser/snapshots/h11types__parser__p_h11request_meta__test__0-tc1_fieldorder_dup.snap
---
source: h11types/src/parser/p_h11request_meta.rs
expression: "HeaderTc { tc_input, tester, res, meta }"
---
HeaderTc {
    tc_input: "Content-Length: 42\r\nContent-Length: 44\r\n",
    tester: HeaderTest {
        seen: [
            "ContentLength(42)",
        ],
    },
    res: Err(
        DuplicateHeader(
            0,
        ),
    ),
    meta: H11RequestMeta {
        method: Unknown,
        target_loc: None,
        version: Unknown,
        transfer_encoding: None,
        transfer_compression: None,
        body_length: None,
        headers_end: None,
    },
}
