h11types/src/parser/snapshots/h11types__parser__p_h11request_meta__test__0-tc1_quoted_backslash.snap
---
source: h11types/src/parser/p_h11request_meta.rs
expression: "HeaderTc { tc_input, tester, res, meta }"
---
HeaderTc {
    tc_input: "Set-Cookie: \"test\\\"bar\\\"foo\"\r\n",
    tester: HeaderTest {
        seen: [
            "SetCookie(Bytes([116, 101, 115, 116, 92, 34, 98, 97, 114, 92, 34, 102, 111, 111]))",
        ],
    },
    res: Ok(
        30,
    ),
    meta: H11RequestMeta {
        method: Unknown,
        target_loc: None,
        version: Unknown,
        transfer_encoding: None,
        transfer_compression: None,
        body_length: None,
        headers_end: None,
    },
}
