h11types/src/parser/snapshots/h11types__parser__p_h11request_meta__test__0-tc1_quoted_strings.snap
---
source: h11types/src/parser/p_h11request_meta.rs
expression: "HeaderTc { tc_input, tester, res, meta }"
---
HeaderTc {
    tc_input: "Host: \"foo.bar\"\r\n",
    tester: HeaderTest {
        seen: [
            "Host(Bytes([102, 111, 111, 46, 98, 97, 114]))",
        ],
    },
    res: Ok(
        Incomplete(
            17,
            [],
        ),
    ),
    meta: H11RequestMeta {
        method: Unknown,
        target_loc: None,
        version: Unknown,
        transfer_encoding: None,
        transfer_compression: None,
        body_length: None,
        headers_end: None,
    },
}
