h11types/src/parser/snapshots/h11types__parser__p_h11request_meta__test__0-try_advance_headers_err.snap
---
source: h11types/src/parser/p_h11request_meta.rs
expression: tester
---
HeaderTest {
    seen: [],
}
