h11types/src/parser/snapshots/h11types__parser__p_h11request_meta__test__1-try_advance_headers_err.snap
---
source: h11types/src/parser/p_h11request_meta.rs
expression: tester
---
HeaderTest {
    seen: [
        "Unknown/Host(MaybeValue([102, 111, 111, 46, 98, 97, 114]))",
    ],
}
